--- a/XYDForms/Controls/XYDDatePickerViewController.xib
+++ b/XYDForms/Controls/XYDDatePickerViewController.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DatePickerViewController" customModule="MealsApp" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="XYDDatePickerViewController" customModule="YFormsDemo" customModuleProvider="target">
             <connections>
                 <outlet property="datePicker" destination="eWs-IK-BBn" id="jCC-In-aCm"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -62,6 +62,7 @@
                 <constraint firstAttribute="trailing" secondItem="j9o-Bk-lmp" secondAttribute="trailing" id="TLK-1u-2FH"/>
                 <constraint firstAttribute="bottom" secondItem="j9o-Bk-lmp" secondAttribute="bottom" id="nvM-zL-siT"/>
             </constraints>
+            <point key="canvasLocation" x="313" y="345"/>
         </view>
     </objects>
 </document>
